--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.18",
+    "apos-to-lex-form": "^1.0.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "inquirer": "^9.2.11",
     "kysely": "^0.26.3",
+    "natural": "^6.10.3",
     "nodemailer": "^6.9.7",
+    "openai": "^4.7.1",
     "pg": "^8.11.3",
     "replicate": "^0.22.0",
+    "spelling-corrector": "^3.0.0",
+    "stopword": "^2.0.8",
     "translate-google": "^1.5.0",
+    "translatte": "^3.0.1",
     "tslib": "^2.6.0",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
